fix weird overflow + set max w based on len

--- a/packages/ui-extensions-dev-console/src/components/Tooltip/TooltipPopover.module.css
+++ b/packages/ui-extensions-dev-console/src/components/Tooltip/TooltipPopover.module.css
@@ -1,3 +1,7 @@
+:root {
+  --tooltip-popover-max-width: 250px;
+}
+
 .Popover {
   position: fixed;
   background-color: var(--dc-color-grey-600);
@@ -5,9 +9,14 @@
   font-weight: 400;
   padding: 1rem;
   border-radius: 4px;
-  max-width: 250px;
+  max-width: var(--tooltip-popover-max-width);
+  white-space: initial;
 
   z-index: 9999;
   box-shadow: 0px 3px 6px -3px rgba(23, 24, 24, 0.08),
     0px 8px 20px -4px rgba(23, 24, 24, 0.12);
+}
+
+.LongText {
+  width: var(--tooltip-popover-max-width);
 }
